--- a/index.html
+++ b/index.html
@@ -39,13 +39,23 @@
         <ul class="site-nav-link-contacts">
           <li class="item">
             <a class="link-contacts" href="info@devstudio.com"
-              >info@devstudio.com</a
+              >
+              <svg class="icon-contacts" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#envelope"></use>
+                </svg>
+              info@devstudio.com</a
             >
+            
           </li>
           <li class="item">
             <a class="link-contacts" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              >
+               <svg class="icon-contacts" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#smartphone"></use>
+                </svg>
+              +38 096 111 11 11</a
             >
+            
           </li>
         </ul>
       </div>
@@ -57,13 +67,16 @@
         <div class="container">
           <h1 class="hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button class="button-hero" type="">Заказать услугу</button>
-        </div>
+        </div> 
       </section>
 
       <section class="section-peculiarities">
         <div class="container">
           <ul class="container-peculiarities">
             <li class="flex-peculiarities icon-plate">
+               <svg class="especially" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#antenna"></use>
+                </svg>
               <h3 class="title-peculiarities">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="paragraph">
                 Идейные соображения, а также начало повседневной работы по
@@ -72,6 +85,9 @@
             </li>
 
             <li class="flex-peculiarities">
+              <svg class="especially" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#clock"></use>
+                </svg>
               <h3 class="title-peculiarities icon-time">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="paragraph">
                 Задача организации, в особенности же рамки и место обучения
@@ -80,6 +96,9 @@
             </li>
 
             <li class="flex-peculiarities">
+              <svg class="especially" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#diagram"></use>
+                </svg>
               <h3 class="title-peculiarities icon-computer">ПЛАНИРОВАНИЕ</h3>
               <p class="paragraph">
                 Равным образом консультация с широким активом в значительной
@@ -88,6 +107,9 @@
             </li>
 
             <li class="flex-peculiarities icon-delivery">
+              <svg class="especially" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#astronaut"></use>
+                </svg>
               <h3 class="title-peculiarities">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="paragraph">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -124,9 +146,36 @@
               <div class="text-comand">
                 <h3 class="title-person">Игорь Демьяненко</h3>
                 <p class="profession">Product Designer</p>
-                <svg class="icons">
-                  <use href=".images/symbol-defs.svg#icon-Instagram"></use>
+                <ul>
+                  <li class="icons">
+                    <a class="a" href="#">
+                      <svg  width="20" height="20">
+                  <use href="./images/symbol-defs.svg#instagram"></use>
                 </svg>
+              </a>
+                  </li>
+                  <li class="icons">
+                  <a class="a" href="#">
+                    <svg  width="20" height="20">
+                  <use href="./images/symbol-defs.svg#twitter"></use>
+                </svg>
+              </a>
+                  </li>
+                  <li class="icons">
+                    <a class="a" href="#">
+                      <svg  width="20" height="20">
+                  <use href="./images/symbol-defs.svg#facebook"></use>
+                </svg>
+              </a>
+                  </li>
+                  <li class="icons">
+                    <a class="a" href="#"> 
+                      <svg width="20" height="20">
+                  <use href="./images/symbol-defs.svg#linkedin"></use>
+                </svg>
+              </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -135,6 +184,18 @@
               <div class="text-comand">
                 <h3 class="title-person">Ольга Репина</h3>
                 <p class="profession">Frontend Developer</p>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#instagram"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#twitter"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#facebook"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#linkedin"></use>
+                </svg>
               </div>
             </li>
 
@@ -143,6 +204,18 @@
               <div class="text-comand">
                 <h3 class="title-person">Николай Тарасов</h3>
                 <p class="profession">Marketing</p>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#instagram"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#twitter"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#facebook"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#linkedin"></use>
+                </svg>
               </div>
             </li>
 
@@ -151,25 +224,89 @@
               <div class="text-comand">
                 <h3 class="title-person">Михаил Ермаков</h3>
                 <p class="profession">UI Designer</p>
+                <svg  width="20" height="20">
+                  <use href="./images/symbol-defs.svg#instagram"></use>
+                </svg>
+                <svg width="20" height="20">
+                  <use href="./images/symbol-defs.svg#twitter"></use>
+                </svg>
+                <svg width="20" height="20">
+                  <use href="./images/symbol-defs.svg#facebook"></use>
+                </svg>
+                <svg width="20" height="20">
+                  <use href="./images/symbol-defs.svg#linkedin"></use>
+                </svg>
               </div>
             </li>
           </ul>
         </div>
       </section>
+       <section class="section-clients">
+        <div class="container">
+          <h2 class="title-clients">Постоянные клиенты</h2>
+          <ul class="flex-clients">
+            <li class="img">
+              <svg class="logotype" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#logo1"></use>
+                </svg>
+            </li>
+            <li class="img">
+             <svg class="logotype" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#logo2"></use>
+                </svg>
+            </li>
+            <li class="img">
+              <svg class="logotype" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#logo3"></use>
+                </svg>
+            </li>
+            <li class="img">
+              <svg class="logotype" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#logo4"></use>
+                </svg>
+            </li>
+            <li class="img">
+              <svg class="logotype" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#logo5"></use>
+                </svg>
+            </li>
+            <li class="img">
+             <svg class="logotype" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#logo6"></use>
+                </svg>
+            </li>
+          </ul>
+          </div>
     </main>
 
     <footer class="footer">
       <div class="container">
         <!-- Подвал -->
+         <div class="footer-container"></div>
         <a class="logo-footer" href="WebStudio">Web<span>Studio</span></a>
 
         <address>
           <a class="contact-section-adress" href="г.Киев,пр-тЛесиУкраинки,26"
             >г. Киев, пр-т Леси Украинки, 26</a
           >
-          <a class="contact" href="info@devstudio.com">info@devstudio.com</a>
+          <a class="contact" href="mail:info@devstudio.com">info@devstudio.com</a>
           <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+        <div class="social-footer">
+        <h2 class="text-footer">ПРИСОЕДИНЯЙТЕСЬ</h2>
+        <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#instagram"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#twitter"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#facebook"></use>
+                </svg>
+                <svg class="icons" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#linkedin"></use>
+                </svg>
+                </div>
       </div>
     </footer>
   </body>
