--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </ul>
         </nav>
         <ul class="site-nav-link-contacts">
-          <li class="item">
+          <li class="item-mail">
             <a class="link-contacts" href="info@devstudio.com"
               >
               <svg class="icon-contacts" width="16" height="12">
